force-app/main/default/objects/Negoptim__ProductGroupList__c/Negoptim__ProductGroupList__c.object-meta.xml
<CustomObject>
    <description>PGL</description>
    <label>Product Group List</label>
    <nameField>
        <displayFormat>PGL-{0}</displayFormat>
        <label>PGL Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>