force-app/main/default/objects/Negoptim__ProductGroupList__c/fields/Negoptim__ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produit de référence pour le groupe</description>
    <label>Reference product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Group Lists</relationshipLabel>
    <relationshipName>Product_Group_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>