force-app/main/default/objects/Negoptim__ProductGroupList__c/fields/Negoptim__ProductQuantity__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProductQuantity__c</fullName>
    <description>Nb de quantité présente du produit pour une unité du groupe</description>
    <label>Product Qty</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>