force-app/main/default/objects/Negoptim__ProductGroupList__c/recordTypes/Negoptim__Box.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Box</fullName>
    <active>true</active>
    <label>Box</label>
</RecordType>