force-app/main/default/objects/Negoptim__ProductGroupList__c/recordTypes/Negoptim__Cluster.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Cluster</fullName>
    <active>true</active>
    <label>Cluster</label>
</RecordType>