force-app/main/default/objects/Negoptim__ProductGroupList__c/recordTypes/Negoptim__Display.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Display</fullName>
    <active>true</active>
    <label>Display</label>
</RecordType>